<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <fragment
        android:id="@+id/nav_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp">

        <Button
            android:id="@+id/moviesButton"
            style="@style/ToolbarItem"
            android:text="@string/movies" />

        <Button
            android:id="@+id/tvseriesButton"
            style="@style/ToolbarItem"
            android:text="@string/tv_series" />

        <Button
            android:id="@+id/bookmarkButton"
            style="@style/ToolbarItem"
            android:text="@string/bookmark" />

    </LinearLayout>

</LinearLayout>