<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/bookmark_card">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/vector_back"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/bookmark"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/vector_bookmark"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_background"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:layout_marginHorizontal="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum_short"
                style="@style/DetailTitle"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp">

                <TextView
                    android:id="@+id/releaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:background="@drawable/element_detail_tag"
                    style="@style/DetailTag"/>

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playtime"
                    android:background="@drawable/element_detail_tag"
                    style="@style/DetailTag"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>